force-app/main/default/objects/Product2/fields/HRCSVC_Basic_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Basic_Service_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Basic Service Fee</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (w/ Basic Service Fee)</relationshipLabel>
    <relationshipName>Products_with_Basic_Service_Fee</relationshipName>
    <type>Lookup</type>
</CustomField>