force-app/main/default/objects/Product2/fields/HRCSVC_JDE_Category_Code_39__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_JDE_Category_Code_39__c</fullName>
    <description>Created as part of SE-1188 to allow for population of the Override Code and Override Reason.</description>
    <label>JDE Category Code 39</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAO</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>