force-app/main/default/objects/Product2/fields/HRCSVC_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Product_Model__c</fullName>
    <label>Product Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>