force-app/main/default/objects/Product2/fields/HRCSVC_Rental_Offering__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Rental_Offering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Offering</label>
    <type>Checkbox</type>
</CustomField>