force-app/main/default/objects/Product2/recordTypes/HRC_Product.recordType-meta.xml
<RecordType>
    <fullName>HRC_Product</fullName>
    <active>true</active>
    <description>Default Standard Product</description>
    <label>HRC Product</label>
</RecordType>